debug/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: etcd-backup
  namespace: default
spec:
  containers:
  - name: etcd-backup
    image: bitnami/etcd:3.5.6-debian-11-r10
    command:
      - sleep
      - "infinity"
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - mountPath: /etc/kubernetes/pki/etcd
      name: etcd-certs
      readOnly: true
    - mountPath: /data/etcd-backup
      name: etcd-backup
    - mountPath: /etc/localtime
      name: local-timezone
  restartPolicy: OnFailure
  hostNetwork: true
  volumes:
  - name: etcd-certs
    hostPath:
      path: /etc/kubernetes/pki/etcd
      type: Directory
  - name: etcd-backup
    hostPath:
      path: /opt/etcd-backup
      type: DirectoryOrCreate
  - name: local-timezone
    hostPath:
      path: /usr/share/zoneinfo/Europe/Paris # mount host timezone to container
