debug/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - nginx.82.66.198.32.nip.io
    port:
      name: http
      number: 80
      protocol: HTTP
