debug/authorize-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow-all
 namespace: frederik-coquelet
spec:
 rules:
 - {}
